Fix timeline z-indexing

--- a/static/style5/_album_art.scss
+++ b/static/style5/_album_art.scss
@@ -8,7 +8,6 @@ div.art_anchor {
 
 div.art_container {
 	position: absolute;
-	z-index: 1;
 	text-align: center;
 	border-color: #222;
 	border-width: 0px;
@@ -25,7 +24,7 @@ div.art_container {
 		cursor: pointer;
 
 		&:hover {
-			z-index: 3;
+			z-index: 1;
 			background-color: #000;
 			border-width: 2px;
 			width: $art_hover_size;
@@ -39,6 +38,7 @@ div.art_container {
 		}
 
 		&.art_expanded, &.art_expanded:hover {
+			z-index: 1;
 			width: $art_full_size !important;
 			height: $art_full_size !important;
 			box-shadow: 3px 3px 5px #000;
